style.css
/* ... */
  @media (max-width: 640px) {
    .no-active-sidebar .left-medium-loop article.has-post-thumbnail .entry-content {
      float: none;
      width: 100%; } }

/*--------------------------------------------------------------
## Search Results Template
--------------------------------------------------------------*/
.search-results article {
  margin-bottom: 60px; }
  .search-results article::after {
    clear: both;
    content: "";
    display: table; }
  @media (max-width: 1024px) {
    .search-results article {
      margin-bottom: 1.4667em; } }
  .search-results article .entry-thumbnail {
    float: left;
    margin: 0;
    width: 42.452830188679%; }
    @media (max-width: 640px) {
      .search-results article .entry-thumbnail {
        float: none;
        margin-bottom: 1.8em;
        text-align: center;
        width: 100%; } }
  .search-results article .entry-content {
    float: right;
    margin: 0;
    width: 100%; }
    @media (max-width: 640px) {
      .search-results article .entry-content {
        float: none; } }
    .search-results article .entry-content .entry-meta {
      justify-content: initial;
      margin: .45em 0 .6em; }
      @media (max-width: 640px) {
        .search-results article .entry-content .entry-meta {
          justify-content: center; } }
    .search-results article .entry-content .entry-title {
      font-size: 25.6px;
      font-size: 1.6rem;
      margin: 0;
      text-align: left; }
      @media (max-width: 640px) {
        .search-results article .entry-content .entry-title {
          text-align: center; } }
    .search-results article .entry-content .entry-summary {
      margin-top: 0.5em; }
      @media (max-width: 640px) {
        .search-results article .entry-content .entry-summary {
          text-align: center; } }
  .search-results article.has-post-thumbnail .entry-content, .search-results article.has-fallback-image .entry-content {
    width: 54.009433962264%; }
    @media (max-width: 640px) {
      .search-results article.has-post-thumbnail .entry-content, .search-results article.has-fallback-image .entry-content {
        width: 100%; } }

.search-results.no-active-sidebar article .entry-thumbnail {
  width: 34.452830188679%; }
  @media (max-width: 640px) {
    .search-results.no-active-sidebar article .entry-thumbnail {
      float: none;
      margin-bottom: 1.8em;
      text-align: center;
      width: 100%; } }

.search-results.no-active-sidebar article.has-post-thumbnail .entry-content, .search-results.no-active-sidebar article.has-fallback-image .entry-content {
  width: 64.009433962264%; }
  @media (max-width: 640px) {
    .search-results.no-active-sidebar article.has-post-thumbnail .entry-content, .search-results.no-active-sidebar article.has-fallback-image .entry-content {
      float: none;
      width: 100%; } }

/*--------------------------------------------------------------
## Portfolio
--------------------------------------------------------------*/
/*--------------------------------------------------------------
### Portfolio Loop
--------------------------------------------------------------*/
.portfolio-filter-terms {
  margin-bottom: 25px; }
  .portfolio-filter-terms button {
    border: none;
    border-bottom: 2px solid #fff;
    color: #adadad;
    font-size: 12px;
    letter-spacing: 1px;
    padding: 0 0 12px 0;
    margin-right: 34px; }
    @media (max-width: 768px) {
      .portfolio-filter-terms button {
        padding: 0 0 5px 0;
        margin: 0 10px 5px 0; } }
    .portfolio-filter-terms button:hover {
      color: #2d2d2d; }
    .portfolio-filter-terms button.active {
      border-bottom: 2px solid #2d2d2d;
      color: #2d2d2d; }

.portfolio-loop #projects-container {
  margin-bottom: 3.5em; }

.portfolio-loop #projects-container,
.related-projects {
  margin-right: -1.1667%;
  margin-left: -1.1667%; }
  @media (max-width: 1175px) {
    body:not(.no-active-sidebar) .portfolio-loop #projects-container, body:not(.no-active-sidebar)
    .related-projects {
      margin-right: -0.875%;
      margin-left: -0.875%; } }
  @media (max-width: 640px) {
    body:not(.no-active-sidebar) .portfolio-loop #projects-container, body:not(.no-active-sidebar)
    .related-projects {
      margin-right: 0;
      margin-left: 0; } }
  @media (max-width: 890px) {
    .no-active-sidebar .portfolio-loop #projects-container, .no-active-sidebar
    .related-projects {
      margin-right: -0.875%;
      margin-left: -0.875%; } }
  @media (max-width: 640px) {
    .no-active-sidebar .portfolio-loop #projects-container, .no-active-sidebar
    .related-projects {
      margin: 0; } }

.archive-project {
  margin-right: 1.1667%;
  margin-bottom: 30px;
  margin-left: 1.1667%;
  width: 31%; }
  @media (max-width: 1175px) {
    body:not(.no-active-sidebar) .archive-project {
      margin-right: 0.875%;
      margin-left: 0.875%;
      width: 48.25%; } }
  @media (max-width: 640px) {
    body:not(.no-active-sidebar) .archive-project {
      clear: none;
      display: block;
      margin-right: 0;
      width: 100%; } }
  @media (max-width: 890px) {
    .no-active-sidebar .archive-project {
      margin-right: 0.875%;
      margin-left: 0.875%;
      width: 48.25%; } }
  @media (max-width: 640px) {
    .no-active-sidebar .archive-project {
      clear: none;
      display: block;
      margin-right: 0;
      width: 100%; } }
  .archive-project .entry-thumbnail {
    margin: 0; }
    .archive-project .entry-thumbnail a {
      display: block;
      position: relative; }
  .archive-project .entry-overlay {
    height: 100%;
    left: 0;
    position: absolute;
    top: 0;
    transition: .3s;
    width: 100%;
    z-index: 0; }
    .entry-thumbnail:hover .entry-overlay {
      background-color: rgba(255, 255, 255, 0.9);
      border: 2px solid #adadad; }
  .archive-project .entry-content {
    opacity: 0;
    transition: .3s;
    visibility: hidden;
    z-index: 5; }
/* ... */

